--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/actmain"
+    android:clickable="true"
+    android:focusable="true"
     tools:context="schaschinger.rubicolour.com.rubicolour.MainActivity">
 
 </RelativeLayout>
