--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#c5cae9"
     >
     <FrameLayout
         android:id="@+id/camera_preview"
@@ -15,7 +16,9 @@
         android:id="@+id/button_capture"
         android:text="Prune!"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:background="#3f51b5"
+        android:textColor="#ffffff"
         />
 </LinearLayout>
